no longer displays About Me title on mobile

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -992,6 +992,7 @@ and (max-device-width : 1024px)  {
     }
 
     #lead-content {
+        padding-top: 80px;
         animation-play-state: paused;
         position: relative;
         transform: none;
@@ -1066,6 +1067,10 @@ and (max-device-width : 812px) {
             display: block;
             margin-bottom: 6px;
         }
+    }
+
+    #lead {
+        background-size: 100% auto;
     }
 
     #lead-content {
